--- a/MAUICalculator/MVVM/CalcView.xaml
+++ b/MAUICalculator/MVVM/CalcView.xaml
@@ -3,10 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUICalculator.MVVM.CalcView"
              Title="CalcView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <Grid RowDefinitions=".4*,.6*">
+
+        <VerticalStackLayout>
+            <Label Text="5*5" StyleClass="LabelText,LabelOperations" />
+            <Label Text="25" StyleClass="LabelText,LabelResult" />
+
+        </VerticalStackLayout> 
+        
+        
+    </Grid>
+    
+   
 </ContentPage>
