--- a/MAUICalculator/Resources/Styles/Colors.xaml
+++ b/MAUICalculator/Resources/Styles/Colors.xaml
@@ -3,6 +3,9 @@
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    
+    <Color x:Key="DarkText">#E3E9EC</Color>
+    <Color x:Key="LightText">#555A60</Color>
 
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
