--- a/MAUICalculator/Resources/Styles/CalcDictionary.xaml
+++ b/MAUICalculator/Resources/Styles/CalcDictionary.xaml
@@ -33,4 +33,16 @@
     </Style>
 
     <!--#endregion-->
+    
+    
+    <!--#region BoxView -->
+    <Style TargetType="BoxView" >
+        <Setter Property="Color"
+                Value="{AppThemeBinding Dark={StaticResource DarkPrimary} , Light={StaticResource LightPrimary}}"/>
+        <Setter Property="CornerRadius"
+                Value="30,30,0,0"/>
+    </Style>
+    
+    <!--#endregion-->
+
 </ResourceDictionary>
