--- a/MAUICalculator/MVVM/CalcView.xaml
+++ b/MAUICalculator/MVVM/CalcView.xaml
@@ -21,38 +21,38 @@
                   Padding="15">
                 
                 <!--#region Row 1 o fila 1 -->
-                <Button Text="AC" Style="{StaticResource YellowButton}"/>
-                <Button Text="⌫" Grid.Column="1" Style="{StaticResource YellowButton}"/>
-                <Button Text="%" Grid.Column="2" Style="{StaticResource YellowButton}"/>
-                <Button Text="/" Grid.Column="3" Style="{StaticResource RedButton}"/>
+                <Button Text="AC" Style="{StaticResource YellowButton}" Command="{Binding ResetCommand}"/>
+                <Button Text="⌫" Grid.Column="1" Style="{StaticResource YellowButton}" Command="{Binding BackSpaceCommand}"/>
+                <Button Text="%" Grid.Column="2" Style="{StaticResource YellowButton}" Command="{Binding OperationCommand}" CommandParameter=" % "/>
+                <Button Text="/" Grid.Column="3" Style="{StaticResource RedButton}" Command="{Binding OperationCommand}" CommandParameter=" / "/>
                 <!--#endregion-->
 
                 <!--#region Row 2 o fila 2 -->
                 <Button Text="7" Grid.Row="1"  Command="{Binding OperationCommand}" CommandParameter="7"/>
                 <Button Text="8" Grid.Column="1" Grid.Row="1" Command="{Binding OperationCommand}" CommandParameter="8"/>
                 <Button Text="9" Grid.Column="2" Grid.Row="1" Command="{Binding OperationCommand}" CommandParameter="9"/>
-                <Button Text="*" Grid.Column="3" Grid.Row="1" Style="{StaticResource RedButton}"/>
+                <Button Text="*" Grid.Column="3" Grid.Row="1" Style="{StaticResource RedButton}" Command="{Binding OperationCommand}" CommandParameter=" * " />
                 <!--#endregion-->
 
                 <!--#region Row 3 o fila 3 -->
                 <Button Text="4" Grid.Row="2" Command="{Binding OperationCommand}" CommandParameter="4" />
                 <Button Text="5" Grid.Column="1" Grid.Row="2" Command="{Binding OperationCommand}" CommandParameter="5"/>
                 <Button Text="6" Grid.Column="2" Grid.Row="2" Command="{Binding OperationCommand}" CommandParameter="6"/>
-                <Button Text="-" Grid.Column="3" Grid.Row="2" Style="{StaticResource RedButton}"/>
+                <Button Text="-" Grid.Column="3" Grid.Row="2" Style="{StaticResource RedButton}" Command="{Binding OperationCommand}" CommandParameter=" - "/>
                 <!--#endregion-->
 
                 <!--#region Row 4 o fila 4 -->
                 <Button Text="1" Grid.Row="3" Command="{Binding OperationCommand}" CommandParameter="1"/>
                 <Button Text="2" Grid.Column="1" Grid.Row="3" Command="{Binding OperationCommand}" CommandParameter="2"/>
                 <Button Text="3" Grid.Column="2" Grid.Row="3" Command="{Binding OperationCommand}" CommandParameter="3"/>
-                <Button Text="+" Grid.Column="3" Grid.Row="3" Style="{StaticResource RedButton}"/>
+                <Button Text="+" Grid.Column="3" Grid.Row="3" Style="{StaticResource RedButton}" Command="{Binding OperationCommand}" CommandParameter=" + " />
                 <!--#endregion-->
 
                 <!--#region Row 5 o fila 5 -->
 
                 <Button Text="0"  Grid.Row="4" Grid.ColumnSpan="2" Command="{Binding OperationCommand}" CommandParameter="0"/>
                 <Button Text="." Grid.Column="2" Grid.Row="4" Command="{Binding OperationCommand}" CommandParameter="."/>
-                <Button Text="=" Grid.Column="3" Grid.Row="4" Style="{StaticResource RedButton}"/>
+                <Button Text="=" Grid.Column="3" Grid.Row="4" Style="{StaticResource RedButton}" Command="{Binding CalculateCommand}"/>
                 <!--#endregion-->
 
 
